# songsterr-mcp

./: AGENTS.md  Dockerfile  README.md  config.yaml  env.example  pyproject.toml  ruff.toml  run.sh
songsterr_mcp/: server.py
songsterr_mcp/utils/: auth.py
tests/: test_http.py  test_stdio.py
